# multiped

./: .gitignore  .mypi.ini  .slugignore  README.md  __init__.py  analysis.py  app.js  common.py  default.config  helper.py  main.py  mapping.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  stats.py
figures/: Q1_model_estimates.eps  Q1_model_estimates.html  Q2_full_factorial.eps  Q2_full_factorial.html  Q2_full_factorial_legend_eHMI.eps  Q2_full_factorial_legend_eHMI.html  Q2_full_factorial_legend_yielding.eps  Q2_full_factorial_legend_yielding.html  Q2_model_estimates.eps  Q2_model_estimates.html  Q3_model_estimates.eps  Q3_model_estimates.html  about_how_many_kilometers_did_you_drive_in_last_12_months.html  about_how_many_kilometers_did_you_drive_in_last_12_months_intake.eps  about_how_many_kilometers_did_you_drive_in_last_12_months_intake.html  age.html  all_videos_kp_slider_plot_TriggerValueRight.eps  all_videos_kp_slider_plot_TriggerValueRight.html  all_videos_kp_slider_plot_all_values_with_yielding.eps  all_videos_kp_slider_plot_all_values_with_yielding.html  all_videos_kp_slider_plot_all_values_without_yielding.eps  all_videos_kp_slider_plot_all_values_without_yielding.html  all_videos_kp_slider_plot_eHMI_off_non-yielding.eps  all_videos_kp_slider_plot_eHMI_off_non-yielding.html  all_videos_kp_slider_plot_eHMI_off_yielding.eps  all_videos_kp_slider_plot_eHMI_off_yielding.html  all_videos_kp_slider_plot_eHMI_on_non-yielding.eps  all_videos_kp_slider_plot_eHMI_on_non-yielding.html  all_videos_kp_slider_plot_eHMI_on_yielding.eps  (+252 more)
(+160 files in other folders)
